syntax = "proto3";

option csharp_namespace = "GrpcMain.DeviceData.Cold"; 
import "google/protobuf/empty.proto";
import "Common/CommonResponse.proto";
service ColdDataService {
    //压缩数据
    rpc CompressDeviceData( Request_CompressDeviceData)
        returns (CommonResponse); 
    //删除冷数据
    //移动冷数据
    //自动迁移冷数据

}

message Request_CompressDeviceData{
    int64 StartTime=1;
    int64 EndTime=2; 
    optional int32 MaxCountOneTime=3;
}